src/components/CancelButton/CancelButton.css
.cancel-button {
	position: absolute;
	top: 13px;
	right: 25px;
	width: 24px;
	height: 24px;
	margin: 0;

	border: none;
	background: #C7C7CC url(/images/cancel.png) center center no-repeat;
	background-size: 50%;
	border-radius: 50%;
	z-index: 10;
}

.cancel-button:focus, .cancel-button:active {
	background-color: #bbb;
}

@media (min-width: 450px) {
	.cancel-button {
		top: 17px;
		right: 15px;
	}
}

